[project]
name = "musicbrainzngs"
version = "0.1.1"
description = "Fork of MusicBrainzNGS library with typings and modernizations"
authors = [
    {name = "David Freitag",email = "david@freitag.site"}
]
license = {text = "Apache"}
requires-python = ">=3.14"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
